# server/docs/swagger.json
@@ -329,6 +329,13 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "Member ID",
+                        "name": "member_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "Community config",
                         "name": "config",
                         "in": "body",
